# Piano

./: .gitignore  MVP方案.md  README.md  deep-research-report.md  environment.yml  pyproject.toml  产品需求文档_PRD.md  开发技术需求文档.md
examples/: README.md  twinkle_twinkle_beginner.mid  twinkle_twinkle_beginner.musicxml  two_hand_scale.musicxml
piano_hand/: __init__.py  cli.py  config.py  errors.py
piano_hand/io/: __init__.py  csv_io.py  json_io.py  project_files.py
piano_hand/models/: __init__.py  motion.py  note.py  project.py  report.py  score.py
piano_hand/motion/: __init__.py  hand_pose.py  interpolation.py  keyboard_geometry.py  trajectory.py
piano_hand/parsers/: __init__.py  midi_parser.py  musicxml_parser.py  normalizer.py
piano_hand/planning/: __init__.py  fingering_dp.py  fingering_rules.py  hand_assignment.py  overrides.py
piano_hand/rendering/: __init__.py  audio_renderer.py  frame_renderer.py  media_probe.py  overlays.py  video_encoder.py
piano_hand/validation/: __init__.py  fingering_checks.py  media_checks.py  report_builder.py  score_checks.py
tests/integration/: test_cli_e2e.py  test_example_scores.py  test_media_pipeline.py
tests/unit/: test_audio_renderer.py  test_cli.py  test_fingering.py  test_frame_renderer.py  test_hand_assignment.py  test_keyboard_geometry.py  test_midi_parser.py  test_models.py  test_musicxml_parser.py  test_normalizer.py  test_overrides.py  test_project_io.py  test_trajectory.py  test_validation.py  test_video_encoder.py
