[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piano-hand"
version = "0.1.0"
description = "Convert MIDI or MusicXML scores into editable virtual-hand piano teaching videos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3,<2",
    "music21>=9,<10",
    "numpy>=1.26,<3",
    "Pillow>=10,<12",
    "pydantic>=2.7,<3",
    "PyYAML>=6,<7",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10,<2",
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.5,<1",
]

[project.scripts]
piano-hand = "piano_hand.cli:app"

[tool.setuptools.packages.find]
include = ["piano_hand*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest-runtime"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
